# dead-code-detective

./: README.md  pyproject.toml
src/dead_code_detective/: cli.py
tests/: test_basic.py
