[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dead-code-detective"
version = "0.1.0"
description = "Find likely unused Python functions before they fossilize."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Debraj Mukherjee" }]
keywords = ["cli", "developer-tools", "open-source", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
dead-code-detective = "dead_code_detective.cli:main"

[project.urls]
Homepage = "https://github.com/debraj-m/dead-code-detective"
Issues = "https://github.com/debraj-m/dead-code-detective/issues"

[tool.setuptools.packages.find]
where = ["src"]
